manifiesto/objects/Tarifas__c.object
<CustomObject>
    <description>Determina tarifas y reajustes para Contratos de Terminales Marítimos</description>
    <fields>
        <fullName>Contrato__c</fullName>
        <label>Contrato</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>Tarifas_y_Reajustes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Factor__c</fullName>
        <label>Factor</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Polinomio__c</fullName>
        <inlineHelpText>Ejemplo: (0,5*iremt/irem0+0,5*IPCt/IPC)</inlineHelpText>
        <label>Polinomio</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servicio__c</fullName>
        <label>Servicio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Almacenaje</fullName>
                </value>
                <value>
                    <fullName>Muellaje</fullName>
                </value>
                <value>
                    <fullName>Transferencia</fullName>
                </value>
                <value>
                    <fullName>Limpieza de TK</fullName>
                </value>
                <value>
                    <fullName>Muellaje a la carga</fullName>
                </value>
                <value>
                    <fullName>Servicio Administrativo</fullName>
                </value>
                <value>
                    <fullName>Agua Fresca</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tarifa_Vigente_Calculada__c</fullName>
        <formula>Tarifa_base__c  *  Factor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tarifa Vigente Calculada</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tarifa_base__c</fullName>
        <label>Tarifa base</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Tarifas</label>
    <nameField>
        <label>Nombre de Tarifa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tarifas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>